[package]
name = "oxide-diff"
version = "0.1.0"
authors = ["Oakchris1955"]
description = "A simple diff utility written in Rust"
edition = "2021"
license = "MIT"


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[profile.release-abort]
inherits = "release"
panic = "abort"


[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
